<resources>
    <string name="app_name">Osrs_Lookup</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hiscores_lookup">Hiscores Lookup</string>
    <string name="player_name">Player Name</string>
    <string name="ironman">Ironman</string>
    <string name="hardcore_ironman">Hardcore Ironman</string>
    <string name="ultimate_ironman">Ultimate Ironman</string>
    <string name="standard">Standard</string>
    <string name="player_details">Player Details</string>
    <string name="player_stats">Player Stats</string>
</resources>