<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailsViewModel"
            type="com.example.osrs_lookup.details.DetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".details.DetailsFragment">

        <TextView
            android:id="@+id/textView"
            style="@android:style/TextAppearance.Material.Display2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="@integer/material_motion_duration_long_1"
            android:text="@string/hiscores_lookup"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/player_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_person_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/player_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/player_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/player_name"
            style="@android:style/TextAppearance.Widget.EditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:hint="@string/player_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/player_search_icon"
            app:layout_constraintTop_toBottomOf="@id/textView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/player_name_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:maxLength="12"
                android:maxLines="@integer/material_motion_duration_medium_1"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/gamemodes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:checkedButton="@id/gm_std"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/player_name"
            app:layout_constraintStart_toStartOf="@id/player_name"
            app:layout_constraintTop_toBottomOf="@+id/player_name">

            <RadioButton
                android:id="@+id/gm_std"
                style="@android:style/TextAppearance.Material.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_stats"
                android:drawablePadding="8dp"
                android:text="@string/standard"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/gm_iron"
                style="@android:style/TextAppearance.Material.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/iron_ic"
                android:drawablePadding="8dp"
                android:drawableTint="@color/iron_grey"
                android:text="@string/ironman"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/gm_hardcore"
                style="@android:style/TextAppearance.Material.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/iron_ic"
                android:drawablePadding="8dp"
                android:drawableTint="@color/iron_red"
                android:text="@string/hardcore_ironman"
                android:textColor="@color/white" />
            />

            <RadioButton
                android:id="@+id/gm_ultimate"
                style="@android:style/TextAppearance.Material.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/iron_ic"
                android:drawablePadding="8dp"
                android:drawableTint="@color/iron_white"
                android:text="@string/ultimate_ironman"
                android:textColor="@color/white" />
        </RadioGroup>

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@+id/search_player_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_player_btn" />

        <Button
            android:layout_width="0dp"
            android:id="@+id/search_player_btn"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="Search Player"
            app:layout_constraintStart_toStartOf="@id/player_name"
            app:layout_constraintEnd_toEndOf="@id/player_name"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/gamemodes"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>